stuck with swapi access issue

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,15 @@
 .App {
-  color: white;
-  padding: 2rem;
   background-color: #282c34;
   min-height: 100vh;
-  box-sizing: border-box;
+  color: white;
+  padding: 0 2rem 2rem;
+}
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2rem;
+  min-height: 80vh;
+  background-color: #222;
 }
